--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "typescript": "^4.3.2",
-    "vite": "^2.6.4"
+    "vite": "^2.6.4",
+    "vite-plugin-compression": "^0.3.6"
   },
   "dependencies": {
     "@types/dat.gui": "^0.7.7",
